--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(lab1)
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -Wall -Werror -Wextra")
 
-set(SOURCE_FILES main.c)
-add_executable(lab1 ${SOURCE_FILES})
+set(SOURCE_FILES)
+add_executable(client ${SOURCE_FILES} client.c)
