--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -Wall -Werror -Wextra")
 set(SOURCE_FILES)
 add_executable(client ${SOURCE_FILES} client.c)
 add_executable(echoc echoc.c)
+add_executable(timec timec.c)
