trying to break out of steve code

--- a/a2code/makefile
+++ b/a2code/makefile
@@ -1,11 +1,10 @@
 
 CC = gcc
 
-LIBS =  -lsocket\
-	/home/courses/cse533/Stevens/unpv13e_solaris2.10/libunp.a
+LIBS =  -lsocket
 
 FLAGS =  -g -O2
-CFLAGS = ${FLAGS} -I/home/courses/cse533/Stevens/unpv13e_solaris2.10/lib
+CFLAGS = ${FLAGS} 
 
 all: get_ifi_info_plus.o prifinfo_plus.o
 	${CC} -o prifinfo_plus prifinfo_plus.o get_ifi_info_plus.o ${LIBS}
