changed the makefile so that things get recompiled when the .h files are changed

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -1,8 +1,8 @@
-CC=gcc
 CC=clang
+CC=gcc
 FLAGS = -g -Wall -Werror -Wextra
+LIBS = -lnsl -lresolv -lsocket
 LIBS = 
-#LIBS = -lnsl -lresolv -lsocket
 
 all: client server
 
@@ -11,7 +11,7 @@ all: client server
 %: %.o
 	$(CC) $(FLAGS) $(LIBS) $< -o $@
 
-%.o: %.c
+%.o: %.c %.h
 	$(CC) $(FLAGS) -c $< -o $@
 
 clean:
