Remove Steven's library dependency (wrapper funcs)
:) My first commit!

--- a/a2code/makefile
+++ b/a2code/makefile
@@ -4,18 +4,20 @@ CC = gcc
 LIBS =  -lsocket
 LIBS =
 
-FLAGS =  -g -O2
-CFLAGS = ${FLAGS} 
+FLAGS =  -g -O2 -Wall -Wextra
+CFLAGS = $(FLAGS) 
+
+.PHONY: all clean
 
 all: get_ifi_info_plus.o prifinfo_plus.o
-	${CC} -o prifinfo_plus prifinfo_plus.o get_ifi_info_plus.o ${LIBS}
+	$(CC) -o prifinfo_plus prifinfo_plus.o get_ifi_info_plus.o $(LIBS)
 
 
 get_ifi_info_plus.o: get_ifi_info_plus.c
-	${CC} ${CFLAGS} -c get_ifi_info_plus.c
+	$(CC) $(CFLAGS) -c get_ifi_info_plus.c
 
 prifinfo_plus.o: prifinfo_plus.c
-	${CC} ${CFLAGS} -c prifinfo_plus.c
+	$(CC) $(CFLAGS) -c prifinfo_plus.c
 
 clean:
 	rm prifinfo_plus prifinfo_plus.o get_ifi_info_plus.o
