--- a/.gitignore
+++ b/.gitignore
@@ -74,5 +74,19 @@ out/
 idea_modules/
 atlassian-ide-plugin.xml
 
+### Tags ###
+## Ignore tags created by etags, ctags, gtags (GNU global) and cscope
+TAGS
+!TAGS/
+tags
+!tags/
+gtags.files
+GTAGS
+GRTAGS
+GPATH
+cscope.files
+cscope.out
+cscope.in.out
+cscope.po.out
 
 build/
