--- a/lab2/CMakeLists.txt
+++ b/lab2/CMakeLists.txt
@@ -6,14 +6,14 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(SERVER_SOURCE_FILES
     server.c
     server.h
-    util.c
-    util.h)
+    common.c
+    common.h)
 
 set(CLIENT_SOURCE_FILES
    client.c
    client.h
-   util.c
-   util.h)
+   common.c
+   common.h)
 
 add_executable(server ${SERVER_SOURCE_FILES})
 add_executable(client ${SERVER_SOURCE_FILES})
