Makes Scott bitch for the rest of the project

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -1,6 +1,6 @@
 CC=clang
 CC=gcc
-FLAGS = -g -Wall -Werror -Wextra
+FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros
 LIBS = -lnsl -lresolv -lsocket
 LIBS = 
 
