trying to fix window stuff

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -21,7 +21,7 @@ xtcp.o: xtcp.c xtcp.h
 	$(CC) $(FLAGS) -c $< -o $@
 
 clean:
-	-rm -f client server *.o
+	-rm -f  test client server *.o
 
 touch:
 	touch *.c *.h
