--- a/lab2/makefile
+++ b/lab2/makefile
@@ -8,13 +8,13 @@ all: client server
 
 %: %.c
 
-%: %.o common.o xtcp.o get_ifi_info_plus.o
+%: %.o common.o xtcp.o get_ifi_info_plus.o rtt.o
 	$(CC) $(FLAGS) $^ $(LIBS) -o $@
 
 %.o: %.c %.h debug.h
 	$(CC) $(FLAGS) -c $< -o $@
 
-common.o: common.c common.h unp.h
+common.o: common.c common.h unp.h get_ifi_info_plus.o
 	$(CC) $(FLAGS) -c $< -o $@
 
 get_ifi_info_plus.o: get_ifi_info_plus.c config.h unp.h unpifiplus.h
@@ -30,7 +30,7 @@ touch:
 	touch *.c *.h
 
 handin:
-	 ~cse533/handin 2 Makefile client.c client.h server.c server.h 
+	 ~cse533/handin 2 makefile client.c client.h server.c server.h common.c common.h config.h debug.h README rtt.c rtt.h unp.h unpifiplus.h xtcp.c xtcp.h get_ifi_info_plus.c
 
 .PHONY: clean all touch handin
 .SECONDARY:
