Add debug and create_file targets for make.

--- a/lab2/makefile
+++ b/lab2/makefile
@@ -1,10 +1,16 @@
 CC=clang
 CC=gcc
-FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros -DDEBUG
+FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros
 LIBS = -lnsl -lresolv -lsocket -lm 
 LIBS = -lm -pthread
 
 all: client server
+
+create_file: FLAGS=-g -Wall -Werror -Wextra -DCREATE_FILE
+create_file: all
+
+debug: FLAGS=-g -Wall -Werror -Wextra -DDEBUG
+debug: all
 
 %: %.c
 
@@ -34,5 +40,5 @@ touch:
 handin:
 	 ~cse533/handin 2 makefile client.c client.h server.c server.h common.c common.h config.h debug.h README rtt.c rtt.h unp.h unpifiplus.h xtcp.c xtcp.h get_ifi_info_plus.c
 
-.PHONY: clean all touch handin
+.PHONY: clean all touch handin create_file debug
 .SECONDARY:
