ODR now finds all of it's iterfaces and MACs.

--- a/lab3/makefile
+++ b/lab3/makefile
@@ -6,14 +6,24 @@ LIBS =
 
 FLAGS = -g -O2
 
-all: get_hw_addrs.o prhwaddrs.o
-	$(CC) -o prhwaddrs prhwaddrs.o get_hw_addrs.o $(LIB) 
+all: ODR prhwaddrs
+
+
 get_hw_addrs.o: get_hw_addrs.c
 	$(CC) $(FLAGS) -c get_hw_addrs.c
 
 prhwaddrs.o: prhwaddrs.c
 	$(CC) $(FLAGS) -c prhwaddrs.c
 
+prhwaddrs: get_hw_addrs.o prhwaddrs.o
+	$(CC) -o prhwaddrs prhwaddrs.o get_hw_addrs.o $(LIB)
+
+ODR.o: ODR.c ODR.h debug.h get_hw_addrs.h
+	$(CC) $(FLAGS) -c $<
+
+ODR: ODR.o get_hw_addrs.o
+	$(CC) $(FLAGS) $< get_hw_addrs.o -o $@
+
 clean:
-	rm -f prhwaddrs prhwaddrs.o get_hw_addrs.o
+	rm -f prhwaddrs prhwaddrs.o get_hw_addrs.o ODR.o ODR
 
