fixed make files

--- a/lab3/makefile
+++ b/lab3/makefile
@@ -8,12 +8,20 @@ CC = gcc
 LIBS =
 
 FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros
+FLAGS = -g -Wall -Werror 
 
-all: ODR
+all: ODR server
 
+%: %.c
 
-get_hw_addrs.o: get_hw_addrs.c
-	$(CC) $(FLAGS) -c get_hw_addrs.c
+%.o: %.c %.h 
+	$(CC) $(FLAGS) -c $<
+
+%: %.o common.o
+	$(CC) $(FLAGS) common.o $< -o $@
+
+common.o: common.c common.h
+	$(CC) $(FLAGS) -c common.c
 
 ODR.o: ODR.c ODR.h debug.h get_hw_addrs.h
 	$(CC) $(FLAGS) -c $<
@@ -22,6 +30,6 @@ ODR: ODR.o get_hw_addrs.o
 	$(CC) $(FLAGS) $< get_hw_addrs.o -o $@
 
 clean:
-	rm -f get_hw_addrs.o ODR.o ODR
+	rm -f  *.o ODR client server
 
 .PHONY: all clean
