broken but not to jenkins :P

--- a/lab3/makefile
+++ b/lab3/makefile
@@ -9,6 +9,7 @@ LIBS =
 
 FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros
 FLAGS = -g -Wall -Werror 
+FLAGS = 
 
 all: ODR server client
 
