Clients and servers still talk directly.
Adding services list to ODR.c, cli/srv talk to ODR's local socket, then
ODR will relay the messages back and forth.

--- a/lab3/makefile
+++ b/lab3/makefile
@@ -7,9 +7,8 @@ CC = gcc
 # LIBS =  /home/courses/cse533/Stevens/unpv13e/libunp.a
 LIBS =
 
-FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros
-FLAGS = -g -Wall -Werror 
-FLAGS = 
+FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros -DDEBUG
+FLAGS = -g -Wall -Werror -DDEBUG
 
 all: ODR server client
 
