made a testing file

--- a/lab3/CMakeLists.txt
+++ b/lab3/CMakeLists.txt
@@ -42,3 +42,9 @@ add_executable(server
 add_executable(client
 	${CLIENT_SOURCE_FILES}
 	$<TARGET_OBJECTS:commonlib>)
+
+add_executable(testcli
+   	testcli.c
+   	${ODR_SOURCE_FILES}
+   	$<TARGET_OBJECTS:hwlib>
+   	$<TARGET_OBJECTS:commonlib>)
