added the debug rule, changed the name of the bins to my name so it matches my username

--- a/lab3/makefile
+++ b/lab3/makefile
@@ -8,17 +8,20 @@ CC = gcc
 LIBS =
 
 FLAGS = -g -Wall -Werror -Wextra -pedantic -Wno-variadic-macros -DDEBUG
-FLAGS = -g -Wall -Wextra -Werror -DDEBUG
+FLAGS = -g -Wall -Wextra -Werror
 
 all: ODR server client
 
 %: %.c
 
-%.o: %.c %.h 
+debug: FLAGS=-g -Wall -Werror -Wextra -DDEBUG
+debug: all
+
+%.o: %.c %.h
 	$(CC) $(FLAGS) -c $<
 
 %: %.o ODR_api.o
-	$(CC) $(FLAGS) ODR_api.o $< -o $@_cse533-11
+	$(CC) $(FLAGS) ODR_api.o $< -o $@_cse533-8
 
 ODR_api.o: ODR_api.c ODR_api.h
 	$(CC) $(FLAGS) -c ODR_api.c
@@ -30,9 +33,9 @@ ODR_util.o: ODR_util.c ODR_util.h debug.h
 	$(CC) $(FLAGS) -c $<
 
 ODR: ODR.o get_hw_addrs.o ODR_util.o
-	$(CC) $(FLAGS) $< get_hw_addrs.o ODR_util.o -o $@_cse533-11
+	$(CC) $(FLAGS) $< get_hw_addrs.o ODR_util.o -o $@_cse533-8
 
 clean:
-	rm -f  *.o *core* sock_* *_cse533-11 /tmp/cse533-11_*
+	rm -f  *.o *core* sock_* *_cse533-8 /tmp/cse533-8_*
 
 .PHONY: all clean
