--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -3,6 +3,11 @@ project(lab4)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Werror -Wextra")
 
+set(TOUR_SRC_FILES
+    tour.c
+    tour.h
+    debug.h)
+
 set(PING_SRC_FILES
     ping.c
     ping.h
@@ -18,6 +23,10 @@ set(COMMON_SRC_FILES
 add_library(ping_lib OBJECT ${PING_SRC_FILES})
 add_library(common_lib OBJECT ${COMMON_SRC_FILES})
 
+add_executable(tour
+    ${TOUR_SRC_FILES}
+    $<TARGET_OBJECTS:ping_lib>
+    $<TARGET_OBJECTS:common_lib>)
 
 add_executable(test
     ${TEST_SRC_FILES}
