added things to cmake

--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -15,11 +15,25 @@ set(COMMON_SRC_FILES
     common.c
     common.h)
 
+set(ARP_SRC_FILES
+    ARP.c
+    ARP.h)
+
+set(HWA_SRC_FILES
+    get_hw_addrs.c
+    get_hw_addrs.h)
+
 add_library(ping_lib OBJECT ${PING_SRC_FILES})
 add_library(common_lib OBJECT ${COMMON_SRC_FILES})
+add_library(hwa_lib OBJECT ${HWA_SRC_FILES})
 
 
 add_executable(test
     ${TEST_SRC_FILES}
     $<TARGET_OBJECTS:ping_lib>
+    $<TARGET_OBJECTS:common_lib>)
+
+add_executable(ARP
+    ${ARP_SRC_FILES}
+    $<TARGET_OBJECTS:hwa_lib>
     $<TARGET_OBJECTS:common_lib>)
