added new struct for ARP, and helper funcs

--- a/lab4/makefile
+++ b/lab4/makefile
@@ -5,7 +5,7 @@ CC = gcc
 
 FLAGS = -g -Wall -Wextra -Werror -DDEBUG
 
-all: test
+all: test ARP
 
 %: %.c
 
@@ -29,6 +29,9 @@ check: cov
 
 test: test.o common.o
 	$(CC) $(FLAGS) $< common.o -o $@ 
+
+ARP: ARP.o common.o get_hw_addrs.o
+	$(CC) $(FLAGS) $< common.o get_hw_addrs.o -o $@
 
 clean:
 	rm -fr  *.o *core* test *.gcno *.gcda *.info *.xml coverage
