--- a/lab4/CMakeLists.txt
+++ b/lab4/CMakeLists.txt
@@ -56,7 +56,8 @@ add_executable(tour
 add_executable(test
     ${TEST_SRC_FILES}
     $<TARGET_OBJECTS:ping_lib>
-    $<TARGET_OBJECTS:common_lib>)
+    $<TARGET_OBJECTS:common_lib>
+    $<TARGET_OBJECTS:api_lib>)
 
 add_executable(ARP
     ${ARP_SRC_FILES}
